syntax = "proto3";
package TheGame.Protobuf;

message ServerMessage {
  oneof message {
    PlayerJoined player_joined = 1;
    PlayerLeft player_left = 2;
    Chat chat = 3;
    PlayerUpdated player_updated = 4;
    Welcome welcome = 5;
    PlayerPositionUpdated player_position_updated = 6;
  }
}

message Player {
  string id = 1;
  string name = 2;
}

message PlayerJoined {
  Player player = 1;
}

message PlayerLeft {
  string player_id = 1;
}

message PlayerUpdated {
  Player player = 1;
}

message PlayerPositionUpdated {
  string player_id = 1;
  float positionX = 2;
  float positionY = 3;
  float velocityX = 4;
  float velocityY = 5;
}

message Chat {
  string player_id = 1;
  string text = 2;
}

message Welcome {
  string player_id = 1;
  GameState game_state = 2;
}

message GameState {
  repeated Player players = 1;
}

message ClientMessage {
  oneof message {
    JoinGame join_game = 1;
    LeaveGame leave_game = 2;
    SendChat send_chat = 3;
    ChangeName change_name = 4;
    PositionUpdate position_update = 5;
  }
}

message JoinGame {
  string name = 1;
}

message SendChat {
  string text = 1;
}

message LeaveGame {
}

message ChangeName {
  string name = 1;
}

message PositionUpdate {
  float positionX = 1;
  float positionY = 2;
  float velocityX = 3;
  float velocityY = 4;
}
